# helmholtz_software

./: .gitignore  CMakeLists.txt  GMATConfig.h.in  README.md  main.cpp  requirements.txt
GMAT/: GMATRunner.cpp  GMATRunner.h  GMATScripter.cpp  GMATScripter.h  README.md
Hardware/: ArduinoConfig.cpp  ArduinoConfig.h  PWRSRCConfig.cpp  PWRSRCConfig.h
Sim/: Simulation.cpp  Simulation.h
V2/: DynamicPlotter.py  GMATScriptCreator.py  HardwareController.py  IA_Controller.ipynb  ML_Controller.py  PIController.py  README.md  Training_data.csv  data_review.py  helmholtz_UI.py  helmholtz_control.py  load_gmat.py  main.py  sim_lineal.csv
V2/data/: GMAT-Mission-Report.txt  TestSat.script
arduino/magnetometer/reading/: reading.ino
arduino/relay/: relay.ino
data/: mission.script
docs/: tasks.md
